--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="split">
+    <div class="dashboard">
+        <p>test</p>
+    
+
+
+    </div>
+    <div class = "main">
+        <div class = "head">
+            <p>head</p>
+        </div>
+
+        <div class="projects"> 
+            <p>pp</p>
+        </div>
+
+
+
+    </div>
     
 </body>
 </html>
