--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class = "main">
         <div class = "head">
-            <p>head</p>
+            <p id="header-text">head</p>
         </div>
 
         <div class="projects"> 
