Dashboard buttons, add spacing between gaps

--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 <body class="split">
     <div class="dashboard">
-        <p>test</p>
-    
-
-
+        <div>
+            <p>Dashboard</p>
+        </div>
+        <div class="buttons-set">
+            <button class="button">Home</button>
+            <button class="button">Profile</button>
+            <button class="button">Messages</button>
+            <button class="button">History</button>
+            <button class="button">Task</button>
+            <button class="button">Community</button>
+        </div>
+        <div class="buttons-set">
+            <button class="button">Settings</button>
+            <button class="button">Support</button>
+            <button class="button">Privacy</button>
+        </div>
     </div>
     <div class = "main">
         <div class = "head">
