align dashboard, completed dashboard structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="split">
     <div class="dashboard">
         <div>
-            <p>Dashboard</p>
+            <p id="dashboard-title">Dashboard</p>
         </div>
         <div class="buttons-set">
             <button class="button">Home</button>
