fix ratio of head and projects, div decided for head

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
     </div>
     <div class = "main">
         <div class = "head">
-            <p id="header-text">head</p>
+            <div>
+                <p>THIS IS SEARCH BAR + BELL + PROFILE</p>
+            </div>
+
+            <div>
+                <p>THIS IS BIGGER PROFILE + BUTTONS OF (NEW, UPLOAD, SHARE)</p>
+            </div>
+
         </div>
 
         <div class="projects"> 
