--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
     </div>
     <div class = "main">
         <div class = "head">
-            <div>
-                <p>THIS IS SEARCH BAR + BELL + PROFILE</p>
+            <div class="top">
+                <div class="top-bar-1">
+                    <p>icon</p>
+                    <input type="text" id="myInputBar" name="inputText" placeholder="Enter text here">
+                </div>
+                <div class="top-bar-2">
+                    <p>bell</p>
+                    <p>picture</p>
+                    <p>Hern Yee</p>
+                </div>
             </div>
-
             <div>
                 <p>THIS IS BIGGER PROFILE + BUTTONS OF (NEW, UPLOAD, SHARE)</p>
             </div>
-
         </div>
 
         <div class="projects"> 
