top done, formatted 2nd layer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class = "main">
         <div class = "head">
-            <div class="top">
+            <div class="top-1">
                 <div class="top-bar-1">
                     <p>icon</p>
                     <input type="text" id="myInputBar" name="inputText" placeholder="Enter text here">
@@ -38,8 +38,17 @@
                     <p>Hern Yee</p>
                 </div>
             </div>
-            <div>
-                <p>THIS IS BIGGER PROFILE + BUTTONS OF (NEW, UPLOAD, SHARE)</p>
+            <div class="top-2">
+                <div class="Profile">
+                    <p>picture</p>
+                    <div class="Name">
+                        <p>Hi there,</p>
+                        <p>Hern Yee</p>
+                    </div>
+                </div>
+                <div class="button-use">
+                    <p> BUTTONS OF (NEW, UPLOAD, SHARE)</p>
+                </div>
             </div>
         </div>
 
