finish top part, started body with division

--- a/index.html
+++ b/index.html
@@ -42,20 +42,30 @@
                 <div class="Profile">
                     <p>picture</p>
                     <div class="Name">
-                        <p>Hi there,</p>
-                        <p>Hern Yee</p>
+                        <p id="hi-there">Hi there,</p>
+                        <p id="Person-Name">Hern Yee</p>
                     </div>
                 </div>
                 <div class="button-use">
-                    <p> BUTTONS OF (NEW, UPLOAD, SHARE)</p>
+                    <button class="use-button">NEW</button>
+                    <button class="use-button">UPLOAD</button>
+                    <button class="use-button">SHARE</button>
                 </div>
             </div>
         </div>
-
-        <div class="projects"> 
-            <p>pp</p>
+        <div class="board">
+            <div class="Projects"> 
+                <p>Projects</p>
+            </div>
+            <div class="right-board">
+                <div class="Announcement"> 
+                    <p>Announcement</p>
+                </div>
+                <div class="Trending"> 
+                    <p>Trending</p>
+                </div>
+            </div>
         </div>
-
 
 
     </div>
