added the cards, fixed height restriction

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         <div class="board">
             <div class="Projects"> 
                 <p>Projects</p>
+                <div class="container-1">
+                    <div class="item">1</div>
+                    <div class="item">2</div>
+                    <div class="item">3</div>
+                    <div class="item">4</div>
+                    <div class="item">5</div>
+                    <div class="item">6</div>
+                </div>
             </div>
             <div class="right-board">
                 <div class="Announcement"> 
