--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="board">
             <div class="Projects"> 
-                <p>Projects</p>
+                <p class="text">Projects</p>
                 <div class="container-1">
                     <div class="item">1</div>
                     <div class="item">2</div>
@@ -67,10 +67,12 @@
             </div>
             <div class="right-board">
                 <div class="Announcement"> 
-                    <p>Announcement</p>
+                    <p class="text">Announcement</p>
+                    <div class="box"></div>
                 </div>
                 <div class="Trending"> 
-                    <p>Trending</p>
+                    <p class="text">Trending</p>
+                    <div class="box"></div>
                 </div>
             </div>
         </div>
